--- a/options/UnVeilify.yaml
+++ b/options/UnVeilify.yaml
@@ -9,10 +9,10 @@ logger:
 train_dataloader:
   name: MaskPairImageDataLoader
   args:
-    masked_image_dir: './data/processed/masked_image/train'
-    identity_image_dir: './data/processed/identity_image/train'
-    unmasked_image_dir: './data/processed/unmasked_image/train'
-    batch_size: 2
+    masked_image_dir: './data/processed/train/masked_image/'
+    identity_image_dir: './data/processed/train/identity_image/'
+    unmasked_image_dir: './data/processed/train/unmasked_image/'
+    batch_size: 16
     shuffle: True,
     num_workers: 2
     image_resolution: 256
@@ -20,10 +20,10 @@ train_dataloader:
 validation_dataloader:
   name: MaskPairImageDataLoader
   args:
-    masked_image_dir: './data/processed/masked_image/val'
-    identity_image_dir: './data/processed/identity_image/val'
-    unmasked_image_dir: './data/processed/unmasked_image/val'
-    batch_size: 2 
+    masked_image_dir: './data/processed/val/masked_image/'
+    identity_image_dir: './data/processed/val/identity_image/'
+    unmasked_image_dir: './data/processed/val/unmasked_image/'
+    batch_size: 16
     shuffle: True,
     num_workers: 2
     image_resolution: 256
@@ -41,8 +41,8 @@ model:
 loss:
   name: MaskRemoverLoss
   args:
-    pretrained_irse50: './pretrain/irse_50.pth'
-    lambda_content: 1.0
+    pretrained_irse50: './pretrain/model_ir_se50.pth'
+    lambda_content: 20.0
     lambda_perceptual: 5.0
     lambda_identity: 0.5
     lambda_adversarial: 1.0
@@ -51,22 +51,26 @@ optimizer:
   optim_g:
     name: Adam
     args:
-      lr: !!float 3e-4
+      lr: 0.0002
       eps: !!float 1e-8
-      betas: [0.9, 0.99]
+      betas: [0.5, 0.9]
 
   optim_d:
     name: Adam
     args:
-      lr: !!float 3e-4
+      lr: 0.0002
       eps: !!float 1e-8
-      betas: [0.9, 0.99]
+      betas: [0.5, 0.9]
 
 lr_scheduler:
-  name: MultiStepLR
+  use_warmup: True
+  warmup_epochs: 5
+
+  name: CosineAnnealingWarmRestarts
   args:
-    milestones: [2500, 5000, 10000, 20000]
-    gamma: 0.5
+    T_0: 50
+    T_mult: 2
+    eta_min: 0
 
 trainer:
   num_epochs: 100
